XTRA: bug fix and heroku fix
Fixed bug relating to anchor tag on Happiness podcast section
Also changed Mentalist blog main pic for heroku - old one not showing up

--- a/src/App.css
+++ b/src/App.css
@@ -1425,6 +1425,9 @@ footer {
   .cover-middle {
     left: 0;
   }
+  .happiness-img-container a {
+    left: 32em;
+  }
 }
 
 /* Portrait Media Query Surface Duo to below iPad */
@@ -1479,6 +1482,9 @@ footer {
      -ms-transform: scale(0.5); /* IE9 */
       -o-transform: scale(0.5); /* Opera 10.5+ */
          transform: scale(0.5);
+  }
+  .happiness-img-container a {
+    left: 19.5em;
   }
   .happiness-recommendations td {
     height: 5em;
@@ -1587,6 +1593,10 @@ footer {
      -ms-transform: scale(0.4); /* IE9 */
       -o-transform: scale(0.4); /* Opera 10.5+ */
          transform: scale(0.4);
+  }
+  .happiness-img-container a {
+    left: 14em;
+    top: 12em;
   }
   .happiness-img-container {
     margin-bottom: -3em;
@@ -1708,6 +1718,11 @@ footer {
       -o-transform: scale(0.375); /* Opera 10.5+ */
          transform: scale(0.375);
   }
+  .happiness-img-container a {
+    left: 14em;
+    top: 13.5em;
+    font-size: 0.9em;
+  }
   .book-title {
     width: 20em;
   }
@@ -1742,6 +1757,11 @@ footer {
      -ms-transform: scale(0.35); /* IE9 */
       -o-transform: scale(0.35); /* Opera 10.5+ */
          transform: scale(0.35);
+  }
+  .happiness-img-container a {
+    left: 15.7em;
+    top: 15em;
+    font-size: 0.8em;
   }
   .harris-recommendations span {
     font-size: 0.8em;
@@ -1795,6 +1815,11 @@ footer {
      -ms-transform: scale(0.3); /* IE9 */
       -o-transform: scale(0.3); /* Opera 10.5+ */
          transform: scale(0.3);
+  }
+  .happiness-img-container a {
+    left: 16.5em;
+    top: 15.5em;
+    font-size: 0.7em;
   }
   .happiness-pocket .pocket-blurb {
     padding-top: 0;
@@ -2103,6 +2128,11 @@ footer {
   .pocket-view-podcast, .pocket-view-book {
     left: -50em;
   }
+  .happiness-img-container a {
+    left: 40em;
+    top: 17em;
+    font-size: 0.9em;
+  }
 }
 
 /* Landscape Media Query a bit below iPhone X by width */
@@ -2119,6 +2149,9 @@ footer {
   .pocket-view-podcast, .pocket-view-book {
     left: -750px;
   }
+  .happiness-img-container a {
+    left: 38em;
+  }
 }
 
 /* Landscape Media Query iPhone 6/7/8plus and below by width */
@@ -2133,6 +2166,9 @@ footer {
   }
   .pocket-view-podcast, .pocket-view-book {
     left: -736px;
+  }
+  .happiness-img-container a {
+    left: 27.5em;
   }
 }
 
@@ -2278,6 +2314,9 @@ footer {
   .happiness-img {
     left: -15em;
   }
+  .happiness-img-container a {
+    left: 25.5em;
+  }
   .happiness-recommendations span {
     line-height: 1.4;
   }
@@ -2298,5 +2337,8 @@ footer {
   }
   .happiness-img {
     left: -17em;
+  }
+  .happiness-img-container a {
+    left: 23em;
   }
 }
